RESOLVED FIXED107043
[BlackBerry] Fix selection handle appearance for RTL text.
https://bugs.webkit.org/show_bug.cgi?id=107043
Summary [BlackBerry] Fix selection handle appearance for RTL text.
Mike Fenton
Reported 2013-01-16 12:39:28 PST
SSIA.
Attachments
Patch (3.47 KB, patch)
2013-01-17 06:01 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2013-01-17 06:01:22 PST
Rob Buis
Comment 2 2013-01-17 07:17:27 PST
Comment on attachment 183176 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-01-17 14:33:08 PST
Comment on attachment 183176 [details] Patch Clearing flags on attachment: 183176 Committed r140043: <http://trac.webkit.org/changeset/140043>
WebKit Review Bot
Comment 4 2013-01-17 14:33:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.