[BlackBerry] Fix selection handle appearance for RTL text. https://bugs.webkit.org/show_bug.cgi?id=107043

Reviewed by Rob Buis.

PR 263585.

Invert the reported selection handle position if to match
the visual order instead of the logical order to create the
desired appearance for RTL text and directional selections.

Reviewed Internally by Gen Mak and Nima Ghanavatian.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::selectionPositionChanged):


Canonical link: https://commits.webkit.org/125409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140043 268f45cc-cd09-0410-ab3c-d52691b4dbfc